<resources>
    <string name="app_name">Trips Around the Globe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_nuevo_viaje">NuevoViajeActivity</string>
    <string name="title_activity_mis_viajes">MisViajesActivity</string>
    <string name="mail_buscado">Introduce el mail de un usuario que quieras buscar</string>
    <string name="buscar">Buscar</string>
    <string name="pais_o_ciudad">¿Sobre qué país o ciudad buscas viajes?</string>
    <string name="cuenta_creada">Tu cuenta ha sido creada con éxito. Te hemos enviado un email de verificación a tu direccion de correo electrónico</string>
    <string name="aceptar">Aceptar</string>
    <string name="restablecer_correo">Escribe tu dirección de correo, pulsa el botón y te enviaremos un correo para que establezcas tu nueva contraseña.</string>
    <string name="email">Email</string>
    <string name="enviar">Enviar</string>
    <string name="gracias">¡Muchas gracias por usar nuestra aplicacion!</string>
    <string name="sugerencias">Si tienes sugerencias sobre la aplicación, ideas, preguntas, por favor, no dudes en ponerte en contacto con nosotros a través de la siguiente dirección de correo electrónico:</string>
    <string name="contacto">victorague@gmail.com</string>
    <string name="buen_viaje">¡Que tengas un buen viaje!</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="olvido_contraseña">¿Se te ha olvidado la contraseña?</string>
    <string name="que_has_hecho">¡Cuéntanos qué has hecho!</string>
    <string name="fecha">FECHA</string>
    <string name="fecha_actual">FECHA ACTUAL</string>
    <string name="elegir_fecha">ELEGIR FECHA</string>
    <string name="ubicacion">UBICACION</string>
    <string name="descripcion_viaje">¡Cuéntanos una breve descripción del viaje!</string>
    <string name="empezar_viaje">Empezar Viaje</string>
    <string name="confirm_email">Confirme Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="confirm_pass">Confirme Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="nuevoviaje">Nuevo Viaje</string>
    <string name="buscarviajes">Buscar Viajes</string>
    <string name="misviajes">Mis viajes</string>
    <string name="lugar">Lugar</string>
    <string name="Fecha">Fecha</string>
    <string name="creado_por">Creado por:</string>
    <string name="usuario">Usuario</string>
    <string name="iniciarsesion">Iniciar Sesión</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="explora">Explora</string>
    <string name="buscar_viajes_usuario">Buscar viajes de un usuario</string>
    <string name="info">Info</string>
    <string name="introduzca_correo">Intruduzca una dirección de correo electrónico</string>
    <string name="formato_no_valido">¡El formato del correco electrónico no es válido</string>
    <string name="breve_recibir">En breves recibirá el correo para restablecer su contraseña</string>
    <string name="elija_lugar">Elija un lugar</string>
    <string name="parece_no_evento">Parece ser que aún no hay eventos para este viaje</string>
    <string name="logim_correcto">Usuario logueado correctamente</string>
    <string name="rellene_campos">Rellene todos los campos</string>
    <string name="debes_verificar_correo">Debes verificar tu direccion de correo</string>
    <string name="titulo_verificacion_correo">Verificacion de correo</string>
    <string name="ya_he_verificado">Ya lo he verificado</string>
    <string name="vuelve_enviar_correo">Vuelve a enviarme el correo</string>
    <string name="compruebe_bandeja">Por favor, compruebe su bandeja de entrada</string>
    <string name="debes_registrar_viaje">¡Debes estar registrado para poder crear tu propio viaje!</string>
    <string name="verificar_comprueba_bandeja">¡Debes confirmar tu cuenta antes de poder crear y ver tus viajes!. Comprueba la bandeja de entrada de tu correo electrónico.</string>
    <string name="debes_reegistrar_verycrer">¡Debes estar regitrado para poder crear y ver tus viajes!</string>
    <string name="ya_logeaado">¡Ya está logueado!</string>
    <string name="porfavor_cierre_sesion">Por favor, cierre sesión antes de crear una nueva cuenta</string>
    <string name="quieres_cerrar">¿Quieres cerrar la sesion?</string>
    <string name="aaaaaa">aaaaaaa</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="debes_estar_logeado">¡Debes estar logueado!</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="parece_no_viajes">Parece ser que aun no hay viajes</string>
    <string name="rellene_campos_ubicacion">Rellena todos los campos y elige ubicacion</string>
    <string name="evento_creado">Evento creado correctamente</string>
    <string name="error_crear_evento">Error al crear el evento</string>
    <string name="elegida_fecha_actual">Elegida fecha actual</string>
    <string name="viaje_creado">Se ha creado el viaje correctamente</string>
    <string name="error_crear_viaje">Error al crear el viaje</string>
    <string name="usuario_registrado">Usuario Registrado Correctamente</string>
    <string name="asegurese_coinciden">Asegurese de que coinciden tanto la contraseña como el email</string>
    <string name="el_usuario">El usuario</string>
    <string name="no_existe_o_no_viajes">no existe o aún no ha creado viajes</string>
    <string name="viaje_a">Viaje a:</string>
    <string name="eventos_subr"><u>Eventos</u></string>



</resources>
