<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/newyork"
    tools:context=".Activities.Views.NuevoEventoActivity">

    <EditText
        android:id="@+id/tvDescripcionEvento"
        android:layout_width="287dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:hint="@string/que_has_hecho"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="204dp"
        android:text="@string/fecha" />

    <Button
        android:id="@+id/btnFechaActualEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/textView5"
        android:text="@string/fecha_actual" />

    <Button
        android:id="@+id/btnElegirFechaEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnFechaActualEvento"
        android:layout_toEndOf="@+id/textView5"
        android:text="@string/elegir_fecha" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnUbicacionEvento"
        android:layout_centerHorizontal="true"
        android:text="@string/ubicacion" />

    <Button
        android:id="@+id/btnUbicacionEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:text="@string/ubicacion" />

    <TextView
        android:id="@+id/tvConsejo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnUbicacionEvento"
        android:layout_marginTop="-150dp"
        android:background="#8888"
        android:gravity="center"
        android:shadowColor="@color/white"
        android:text="¡Asegúrese de haber rellenado el campo descripión y fecha antes de elegir ubicación!"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textStyle="italic" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnCrearEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="18dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_input_add" />

</RelativeLayout>