<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityForget">

    <TextView
        android:id="@+id/tvInstruccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:gravity="center"
        android:text="@string/restablecer_correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="64dp" />

    <Button
        android:id="@+id/btnRestablecimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="213dp"
        android:text="@string/enviar" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="332dp"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="141dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputEmailForget"
            android:layout_width="394dp"
            android:layout_height="40dp"
            android:hint="@string/email" />
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>